pratice chapter 2 text

--- a/html-css-practice/index.html
+++ b/html-css-practice/index.html
@@ -3,9 +3,103 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML/CSS Training</title>
+    <title>This is the Title of the Page</title>
   </head>
   <body>
-    
+    <h1>This is the Body of the page</h1>
+    <p>Anything within the body of a web page is displayed in the main browser window.</p>
+
+    <section>
+        <hr>
+        <div>
+            <h1>Chapter 2: Text | this is a Level 1 Heading</h1>
+            <div>
+                <h2>this is a Level 2 Heading</h2>
+                <h3>this is a Level 3 Heading</h3>
+                <h4>this is a Level 4 Heading</h4>
+                <h5>this is a Level 5 Heading</h5>
+                <h6>this is a Level 6 Heading</h6>
+            </div>
+        </div>
+        <div>
+            <h2>2. Bold & Italic</h2>
+            <div>
+                <h3>Bold</h3>
+                <p>this is how we make a word appear <b>bold.</b></p>
+            </div>
+        </div>
+        <div>
+            <h2>3. Superscript & Subscript</h2>
+            <div>
+                <h3>- Superscript</h3>
+                <p>On the 4<sup>th</sup> of September you will learn about E=MC<sup>2</sup>.</p>
+            </div>
+            <div>
+                <h3>- Subscript</h3>
+                <p>The amount of CO<sub>2</sub> in the atmosphere grew by 2ppm in 2009<sub>1</sub>.</p>
+            </div>
+        </div>
+        <div>
+            <h2>4. Line breaks & Horizontal rules</h2>
+            <div>
+                <h3>- line breaks</h3>
+                <p>The Earth<br />gets one hundred tons heavier every day<br />due to falling space dust.</p>
+            </div>
+            <div>
+                <h3>- Horizontal</h3>
+                <p>Venus is the only planet that rotates clockwise.</p>
+                <hr />
+                <p>Jupiter is bigger than all the other planets combined.</p>
+            </div>
+        </div>
+        <div>
+            <h2>5. Strong & Emphasis</h2>
+            <div>
+                <h3>-  Strong</h3>
+                <p><strong>Beware:</strong> Pickpockets operate in this area.</p>
+            </div>
+            <div>
+                <h3>- Emphasis</h3>
+                <p>I <em>think</em> Ivy was the first.</p>
+                <p>I think <em>Ivy</em> was the first.</p>
+                <p>I think Ivy was the <em>first</em>.</p>
+            </div>
+        </div>
+        <div>
+            <h2>6. Quotations</h2>
+            <div>
+                <blockquote cite="http://en.wikipedia.org/wiki/Winnie-the-Pooh">
+                    <p>Did you ever stop to think, and forget to start again?</p>
+                </blockquote>
+
+                <p>As A.A. Milne said, <q>Some people talk to animals. Not many listen though. That's the problem.</q></p>
+            </div>
+        </div>
+        <div>
+            <h2>7. Abbreviations & Acronyms</h2>
+            <p><abbr title="Professor">Prof</abbr> Stephen Hawking is a theoretical physicist and cosmologist.</p><p><acronym title="National Aeronautics and Space Administration">NASA</acronym> do some crazy space stuff.</p>
+        </div>
+        <div>
+            <h2>8. Citations & Definitions</h2>
+            <div>
+                <h3>- Citations</h3>
+                <p><cite>A Brief History of Time</cite> by Stephen Hawking has sold over ten million copies worldwide.</p>
+            </div>
+            <div>
+                <h3>- Definitions</h3>
+                <p>A <dfn>black hole</dfn> is a region of space from which nothing, not even light, can escape.</p>
+            </div>
+        </div>
+        <div>
+            <h2>9. Author details</h2>
+            <address>
+                <p><a href="mailto:homer@example.org"> homer@example.org</a></p><p>742 Evergreen Terrace, Springfield.</p>
+            </address>
+        </div>
+        <div>
+            <h2>10. Changes to content</h2>
+            <p>It was the <del>worst</del> <ins>best</ins> idea she had ever had.</p>
+        </div>
+    </section>
   </body>
 </html>
