--- a/html-css-practice/index.html
+++ b/html-css-practice/index.html
@@ -101,5 +101,61 @@
             <p>It was the <del>worst</del> <ins>best</ins> idea she had ever had.</p>
         </div>
     </section>
-  </body>
+    <hr>
+    <section>
+        <h2>Chapter 3: Lists</h2>
+        <div>
+            <h3>1. Ordered Lists</h3>
+            <div>
+                <ol>
+                    <li>Chop potatoes into quarters</li>
+                    <li>Simmer in salted water for 15-20 minutes until tender</li>
+                    <li>Heat milk, butter and nutmeg</li>
+                    <li>Drain potatoes and mash</li>
+                    <li>Mix in the milk mixture</li>
+                </ol>
+            </div>
+        </div>
+        <div>
+            <h3>2. Unordered Lists</h3>
+            <div>
+                <ul>
+                    <li>1kg King Edward potatoes</li>
+                    <li>100ml milk</li>
+                    <li>50g salted butter</li>
+                    <li>Freshly grated nutmeg</li>
+                    <li>Salt and pepper to taste</li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <h3>3. Definition Lists</h3>
+            <dl>
+                <dt>Sashimi</dt>
+                <dd>Sliced raw fish that is served with condiments such as shredded daikon radish or ginger root, wasabi and soy sauce</dd>
+                <dt>Scale</dt>
+                <dd>A device used to accurately measure the weight of ingredients</dd>
+                <dd>A technique by which the scales are removed from the skin of a fish</dd>
+                <dt>Scamorze</dt>
+                <dt>Scamorzo</dt>
+                <dd>An Italian cheese usually made from whole cow's milk (although it was traditionally made from buffalo milk)</dd>
+            </dl>
+        </div>
+        <div>
+            <h3>4. Nested Lists</h3>
+            <ul>
+                <li>Mousses</li>
+                <li>Pastries
+                <ul>
+                    <li>Croissant</li>
+                    <li>Mille-feuille</li>
+                    <li>Palmier</li>
+                    <li>Profiterole</li>
+                </ul>
+                </li>
+                <li>Tarts</li>
+            </ul>
+        </div>
+    </section>
+</body>
 </html>
