practice chapter 4 links

--- a/html-css-practice/index.html
+++ b/html-css-practice/index.html
@@ -157,5 +157,31 @@
             </ul>
         </div>
     </section>
+    <hr>
+    <section>
+        <h2>Chapter 4: Links</h2>
+        <div>
+            <h3>1. Linking to other sites</h3>
+            <p>Movie Reviews:
+                <ul>
+                    <li><a href="http://www.empireonline.com">Empire</a></li>
+                    <li><a href="http://www.metacritic.com">Metacritic</a></li>
+                    <li><a href="http://www.rottentomatoes.com">Rotten Tomatoes</a></li>
+                    <li><a href="http://www.variety.com">Variety</a></li>
+                </ul>
+            </p>
+        </div>
+        <div>
+            <h3>2. Linking to other pages</h3>
+            <p>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us.html">About</a></li>
+                    <li><a href="movies.html">Movies</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </p>
+        </div>
+    </section>
 </body>
 </html>
