--- a/html-css-practice/index.html
+++ b/html-css-practice/index.html
@@ -1,187 +1,301 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>This is the Title of the Page</title>
-  </head>
-  <body>
-    <h1>This is the Body of the page</h1>
-    <p>Anything within the body of a web page is displayed in the main browser window.</p>
 
-    <section>
-        <hr>
-        <div>
-            <h1>Chapter 2: Text | this is a Level 1 Heading</h1>
-            <div>
-                <h2>this is a Level 2 Heading</h2>
-                <h3>this is a Level 3 Heading</h3>
-                <h4>this is a Level 4 Heading</h4>
-                <h5>this is a Level 5 Heading</h5>
-                <h6>this is a Level 6 Heading</h6>
-            </div>
-        </div>
-        <div>
-            <h2>2. Bold & Italic</h2>
-            <div>
-                <h3>Bold</h3>
-                <p>this is how we make a word appear <b>bold.</b></p>
-            </div>
-        </div>
-        <div>
-            <h2>3. Superscript & Subscript</h2>
-            <div>
-                <h3>- Superscript</h3>
-                <p>On the 4<sup>th</sup> of September you will learn about E=MC<sup>2</sup>.</p>
-            </div>
-            <div>
-                <h3>- Subscript</h3>
-                <p>The amount of CO<sub>2</sub> in the atmosphere grew by 2ppm in 2009<sub>1</sub>.</p>
-            </div>
-        </div>
-        <div>
-            <h2>4. Line breaks & Horizontal rules</h2>
-            <div>
-                <h3>- line breaks</h3>
-                <p>The Earth<br />gets one hundred tons heavier every day<br />due to falling space dust.</p>
-            </div>
-            <div>
-                <h3>- Horizontal</h3>
-                <p>Venus is the only planet that rotates clockwise.</p>
-                <hr />
-                <p>Jupiter is bigger than all the other planets combined.</p>
-            </div>
-        </div>
-        <div>
-            <h2>5. Strong & Emphasis</h2>
-            <div>
-                <h3>-  Strong</h3>
-                <p><strong>Beware:</strong> Pickpockets operate in this area.</p>
-            </div>
-            <div>
-                <h3>- Emphasis</h3>
-                <p>I <em>think</em> Ivy was the first.</p>
-                <p>I think <em>Ivy</em> was the first.</p>
-                <p>I think Ivy was the <em>first</em>.</p>
-            </div>
-        </div>
-        <div>
-            <h2>6. Quotations</h2>
-            <div>
-                <blockquote cite="http://en.wikipedia.org/wiki/Winnie-the-Pooh">
-                    <p>Did you ever stop to think, and forget to start again?</p>
-                </blockquote>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>This is the Title of the Page</title>
+</head>
 
-                <p>As A.A. Milne said, <q>Some people talk to animals. Not many listen though. That's the problem.</q></p>
-            </div>
-        </div>
-        <div>
-            <h2>7. Abbreviations & Acronyms</h2>
-            <p><abbr title="Professor">Prof</abbr> Stephen Hawking is a theoretical physicist and cosmologist.</p><p><acronym title="National Aeronautics and Space Administration">NASA</acronym> do some crazy space stuff.</p>
-        </div>
-        <div>
-            <h2>8. Citations & Definitions</h2>
-            <div>
-                <h3>- Citations</h3>
-                <p><cite>A Brief History of Time</cite> by Stephen Hawking has sold over ten million copies worldwide.</p>
-            </div>
-            <div>
-                <h3>- Definitions</h3>
-                <p>A <dfn>black hole</dfn> is a region of space from which nothing, not even light, can escape.</p>
-            </div>
-        </div>
-        <div>
-            <h2>9. Author details</h2>
-            <address>
-                <p><a href="mailto:homer@example.org"> homer@example.org</a></p><p>742 Evergreen Terrace, Springfield.</p>
-            </address>
-        </div>
-        <div>
-            <h2>10. Changes to content</h2>
-            <p>It was the <del>worst</del> <ins>best</ins> idea she had ever had.</p>
-        </div>
-    </section>
+<body>
+  <h1>This is the Body of the page</h1>
+  <p>Anything within the body of a web page is displayed in the main browser window.</p>
+
+  <section>
     <hr>
-    <section>
-        <h2>Chapter 3: Lists</h2>
-        <div>
-            <h3>1. Ordered Lists</h3>
-            <div>
-                <ol>
-                    <li>Chop potatoes into quarters</li>
-                    <li>Simmer in salted water for 15-20 minutes until tender</li>
-                    <li>Heat milk, butter and nutmeg</li>
-                    <li>Drain potatoes and mash</li>
-                    <li>Mix in the milk mixture</li>
-                </ol>
-            </div>
-        </div>
-        <div>
-            <h3>2. Unordered Lists</h3>
-            <div>
-                <ul>
-                    <li>1kg King Edward potatoes</li>
-                    <li>100ml milk</li>
-                    <li>50g salted butter</li>
-                    <li>Freshly grated nutmeg</li>
-                    <li>Salt and pepper to taste</li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <h3>3. Definition Lists</h3>
-            <dl>
-                <dt>Sashimi</dt>
-                <dd>Sliced raw fish that is served with condiments such as shredded daikon radish or ginger root, wasabi and soy sauce</dd>
-                <dt>Scale</dt>
-                <dd>A device used to accurately measure the weight of ingredients</dd>
-                <dd>A technique by which the scales are removed from the skin of a fish</dd>
-                <dt>Scamorze</dt>
-                <dt>Scamorzo</dt>
-                <dd>An Italian cheese usually made from whole cow's milk (although it was traditionally made from buffalo milk)</dd>
-            </dl>
-        </div>
-        <div>
-            <h3>4. Nested Lists</h3>
-            <ul>
-                <li>Mousses</li>
-                <li>Pastries
-                <ul>
-                    <li>Croissant</li>
-                    <li>Mille-feuille</li>
-                    <li>Palmier</li>
-                    <li>Profiterole</li>
-                </ul>
-                </li>
-                <li>Tarts</li>
-            </ul>
-        </div>
-    </section>
-    <hr>
-    <section>
-        <h2>Chapter 4: Links</h2>
-        <div>
-            <h3>1. Linking to other sites</h3>
-            <p>Movie Reviews:
-                <ul>
-                    <li><a href="http://www.empireonline.com">Empire</a></li>
-                    <li><a href="http://www.metacritic.com">Metacritic</a></li>
-                    <li><a href="http://www.rottentomatoes.com">Rotten Tomatoes</a></li>
-                    <li><a href="http://www.variety.com">Variety</a></li>
-                </ul>
-            </p>
-        </div>
-        <div>
-            <h3>2. Linking to other pages</h3>
-            <p>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about-us.html">About</a></li>
-                    <li><a href="movies.html">Movies</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </p>
-        </div>
-    </section>
+    <div>
+      <h1>Chapter 2: Text | this is a Level 1 Heading</h1>
+      <div>
+        <h2>this is a Level 2 Heading</h2>
+        <h3>this is a Level 3 Heading</h3>
+        <h4>this is a Level 4 Heading</h4>
+        <h5>this is a Level 5 Heading</h5>
+        <h6>this is a Level 6 Heading</h6>
+      </div>
+    </div>
+    <div>
+      <h2>2. Bold & Italic</h2>
+      <div>
+        <h3>Bold</h3>
+        <p>this is how we make a word appear <b>bold.</b></p>
+      </div>
+    </div>
+    <div>
+      <h2>3. Superscript & Subscript</h2>
+      <div>
+        <h3>- Superscript</h3>
+        <p>On the 4<sup>th</sup> of September you will learn about E=MC<sup>2</sup>.</p>
+      </div>
+      <div>
+        <h3>- Subscript</h3>
+        <p>The amount of CO<sub>2</sub> in the atmosphere grew by 2ppm in 2009<sub>1</sub>.</p>
+      </div>
+    </div>
+    <div>
+      <h2>4. Line breaks & Horizontal rules</h2>
+      <div>
+        <h3>- line breaks</h3>
+        <p>The Earth<br />gets one hundred tons heavier every day<br />due to falling space dust.</p>
+      </div>
+      <div>
+        <h3>- Horizontal</h3>
+        <p>Venus is the only planet that rotates clockwise.</p>
+        <hr />
+        <p>Jupiter is bigger than all the other planets combined.</p>
+      </div>
+    </div>
+    <div>
+      <h2>5. Strong & Emphasis</h2>
+      <div>
+        <h3>- Strong</h3>
+        <p><strong>Beware:</strong> Pickpockets operate in this area.</p>
+      </div>
+      <div>
+        <h3>- Emphasis</h3>
+        <p>I <em>think</em> Ivy was the first.</p>
+        <p>I think <em>Ivy</em> was the first.</p>
+        <p>I think Ivy was the <em>first</em>.</p>
+      </div>
+    </div>
+    <div>
+      <h2>6. Quotations</h2>
+      <div>
+        <blockquote cite="http://en.wikipedia.org/wiki/Winnie-the-Pooh">
+          <p>Did you ever stop to think, and forget to start again?</p>
+        </blockquote>
+        <p>As A.A. Milne said, <q>Some people talk to animals. Not many listen though. That's the problem.</q></p>
+      </div>
+    </div>
+    <div>
+      <h2>7. Abbreviations & Acronyms</h2>
+      <p><abbr title="Professor">Prof</abbr> Stephen Hawking is a theoretical physicist and cosmologist.</p>
+      <p><acronym title="National Aeronautics and Space Administration">NASA</acronym> do some crazy space stuff.</p>
+    </div>
+    <div>
+      <h2>8. Citations & Definitions</h2>
+      <div>
+        <h3>- Citations</h3>
+        <p><cite>A Brief History of Time</cite> by Stephen Hawking has sold over ten million copies worldwide.</p>
+      </div>
+      <div>
+        <h3>- Definitions</h3>
+        <p>A <dfn>black hole</dfn> is a region of space from which nothing, not even light, can escape.</p>
+      </div>
+    </div>
+    <div>
+      <h2>9. Author details</h2>
+      <address>
+        <p><a href="mailto:homer@example.org"> homer@example.org</a></p>
+        <p>742 Evergreen Terrace, Springfield.</p>
+      </address>
+    </div>
+    <div>
+      <h2>10. Changes to content</h2>
+      <p>It was the <del>worst</del> <ins>best</ins> idea she had ever had.</p>
+    </div>
+  </section>
+  <hr>
+  <section>
+    <h2>Chapter 3: Lists</h2>
+    <div>
+      <h3>1. Ordered Lists</h3>
+      <div>
+        <ol>
+          <li>Chop potatoes into quarters</li>
+          <li>Simmer in salted water for 15-20 minutes until tender</li>
+          <li>Heat milk, butter and nutmeg</li>
+          <li>Drain potatoes and mash</li>
+          <li>Mix in the milk mixture</li>
+        </ol>
+      </div>
+    </div>
+    <div>
+      <h3>2. Unordered Lists</h3>
+      <div>
+        <ul>
+          <li>1kg King Edward potatoes</li>
+          <li>100ml milk</li>
+          <li>50g salted butter</li>
+          <li>Freshly grated nutmeg</li>
+          <li>Salt and pepper to taste</li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <h3>3. Definition Lists</h3>
+      <dl>
+        <dt>Sashimi</dt>
+        <dd>Sliced raw fish that is served with condiments such as shredded daikon radish or ginger root, wasabi and soy
+          sauce</dd>
+        <dt>Scale</dt>
+        <dd>A device used to accurately measure the weight of ingredients</dd>
+        <dd>A technique by which the scales are removed from the skin of a fish</dd>
+        <dt>Scamorze</dt>
+        <dt>Scamorzo</dt>
+        <dd>An Italian cheese usually made from whole cow's milk (although it was traditionally made from buffalo milk)
+        </dd>
+      </dl>
+    </div>
+    <div>
+      <h3>4. Nested Lists</h3>
+      <ul>
+        <li>Mousses</li>
+        <li>Pastries
+          <ul>
+            <li>Croissant</li>
+            <li>Mille-feuille</li>
+            <li>Palmier</li>
+            <li>Profiterole</li>
+          </ul>
+        </li>
+        <li>Tarts</li>
+      </ul>
+    </div>
+  </section>
+  <hr>
+  <section>
+    <h2>Chapter 4: Links</h2>
+    <div>
+      <h3>1. Linking to other sites</h3>
+      <p>Movie Reviews:
+      <ul>
+        <li><a href="http://www.empireonline.com">Empire</a></li>
+        <li><a href="http://www.metacritic.com">Metacritic</a></li>
+        <li><a href="http://www.rottentomatoes.com">Rotten Tomatoes</a></li>
+        <li><a href="http://www.variety.com">Variety</a></li>
+      </ul>
+      </p>
+    </div>
+    <div>
+      <h3>2. Linking to other pages</h3>
+      <p>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">About</a></li>
+        <li><a href="movies.html">Movies</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      </p>
+    </div>
+  </section>
+  <hr>
+  <section>
+    <h2>Chapter 5: Images</h2>
+    <div>
+      <h3>1. Adding images</h3>
+      <img
+        src="https://media.gettyimages.com/id/1326791987/photo/quokka-family.jpg?s=1024x1024&w=gi&k=20&c=d2w1D6LHhqlHp_Y_fz1ymi_Q8D2CLpgokbQMXvHIPT4="
+        alt="A family of quokka"
+        title="The quokka is an Australian marsupial that is similar in size to the domestic cat." />
+    </div>
+    <div>
+      <h3>2. Height & width of images</h3>
+      <img
+        src="https://media.gettyimages.com/id/1326791987/photo/quokka-family.jpg?s=1024x1024&w=gi&k=20&c=d2w1D6LHhqlHp_Y_fz1ymi_Q8D2CLpgokbQMXvHIPT4="
+        alt="A family of quokka" width="600" height="450" />
+    </div>
+    <div>
+      <h3>3. HTML5: Figure and figure caption</h3>
+      <figure>
+        <img
+          src="https://media.gettyimages.com/id/1326791987/photo/quokka-family.jpg?s=1024x1024&w=gi&k=20&c=d2w1D6LHhqlHp_Y_fz1ymi_Q8D2CLpgokbQMXvHIPT4="
+          alt="Photograph of two sea otters floating in water">
+        <br />
+        <figcaption>Sea otters hold hands when they sleep so they don't drift away from each other.</figcaption>
+      </figure>
+    </div>
+  </section>
+  <hr>
+  <section>
+    <h2>Chapter 6: Tables</h2>
+    <div>
+      <h3>1. Basic table structure</h3>
+      <table>
+        <tr>
+          <td>15</td>
+          <td>15</td>
+          <td>30</td>
+        </tr>
+        <tr>
+          <td>45</td>
+          <td>60</td>
+          <td>45</td>
+        </tr>
+        <tr>
+          <td>60</td>
+          <td>90</td>
+          <td>90</td>
+        </tr>
+      </table>
+    </div>
+    <div>
+      <h3>2. Table headings</h3>
+      <table>
+        <tr>
+          <th></th>
+          <th scope="col">Saturday</th>
+          <th scope="col">Sunday</th>
+        </tr>
+        <tr>
+          <th scope="row">Tickets sold:</th>
+          <td>120</td>
+          <td>135</td>
+        </tr>
+        <tr>
+          <th scope="row">Total sales:</th>
+          <td>$600</td>
+          <td>$675</td>
+        </tr>
+      </table>
+    </div>
+    <div>
+      <h3>3. long table</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Income</th>
+            <th>Expenditure</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1st January</th>
+            <td>250</td>
+            <td>36</td>
+          </tr>
+          <tr>
+            <th>2nd January</th>
+            <td>285</td>
+            <td>48</td>
+          </tr>
+          <!-- additional rows as above -->
+          <tr>
+            <th>31st January</th>
+            <td>129</td>
+            <td>64</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td></td>
+            <td>7824</td>
+            <td>1241</td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </section>
 </body>
+
 </html>
