practice chapter 8 extra markup

--- a/html-css-practice/index.html
+++ b/html-css-practice/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>This is the Title of the Page</title>
+  <!-- Chapter 8: Extra Markup | 7. Information about your pages -->
+  <meta name="description" content="An Essay on Installation Art" />
+  <meta name="keywords" content="installation, art, opinion" />
+  <meta name="robots" content="nofollow" />
+  <meta http-equiv="author" content="Jon Duckett" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <meta http-equiv="expires" content="Fri, 04 Apr 2014 23:59:59 GMT" />
+  <!-- End chapter 8 -->
 </head>
 
 <body>
@@ -500,6 +508,68 @@
           <input type="search" name="search" placeholder="Enter keyword" />
           <input type="submit" value="Search" />
         </form>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <!-- Chapter 8: Extra Markup -->
+  <section>
+    <h2>Chapter 8: Extra Markup</h2>
+    <div>
+      <h3>1. Comments in HTML</h3>
+      <div>
+        <!-- start of introduction -->
+        <h1>Current Exhibitions</h1>
+        <h2>Olafur Eliasson</h2>
+        <!-- end of introduction -->
+        <!-- start of main text -->
+        <p>Olafur Eliasson was born in Copenhagen, Denmark in 1967 to Icelandic parents.</p>
+        <p>He is known for sculptures and large-scale installation art employing elemental materials such as light,
+          water, and air temperature to enhance the viewer's experience.</p>
+        <!-- end of main text -->
+        <!-- <a href="mailto:info@example.org">Contact</a> -->
+      </div>
+    </div>
+    <div>
+      <h3>2. ID Attribute</h3>
+      <p>Water and air. So very commonplace are these substances, they hardly attract attention - and yet they vouchsafe
+        our very existence.</p>
+      <p id="pullquote">Every time I view the sea I feel a calming sense of security, as if visiting my ancestral home;
+        I embark on a voyage of seeing.</p>
+      <p>Mystery of mysteries, water and air are right there before us in the sea.</p>
+    </div>
+    <div>
+      <h3>3. Class Attribute</h3>
+      <p class="important">For a one-year period from November 2010, the Marugame Genichiro-Inokuma Museum of
+        Contemporary Art (MIMOCA) will host a cycle of four Hiroshi Sugimoto exhibitions.</p>
+      <p>Each will showcase works by the artist thematically contextualized under the headings "Science,"
+        "Architecture," "History" and "Religion" so as to present a comprehensive panorama of the artist's oeuvre.</p>
+      <p class="important admittance">Hours: 10:00 - 18:00 (No admittance after 17:30)</p>
+    </div>
+    <div>
+      <h3>4. Block elements</h3>
+      <div>
+        <h1>Hiroshi Sugimoto</h1>
+        <p>The dates for the ORIGIN OF ART exhibition are as follows:</p>
+        <ul>
+          <li>Science: 21 Nov - 20 Feb 2010/11</li>
+          <li>Architecture: 6 Mar - 15 May 2011</li>
+          <li>History: 29 May - 21 Aug 2011</li>
+          <li>Religion: 28 Aug - 6 Nov 2011</li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <h3>5. Inline elements</h3>
+      Timed to a single revolution of the planet around the sun at a 23.4 degrees tilt that plays out the rhythm of the seasons, this <em>Origins of Art</em> cycle is organized around four themes: <b>science, architecture, history</b> and <b>religion</b>.
+    </div>
+    <div>
+      <h3>6. Iframe</h3>
+      <iframe width="450" height="350" src="http://maps.google.co.uk/maps?q=moma+new+york&output=embed"></iframe>
+
+      <div>
+        <h4>- scrolling, frameborder, seamless</h4>
+        <iframe src="http://maps.google.co.uk/maps?q=moma+new+york&output=embed" width="450"  height="350" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
   </section>
