practice chapter 10 introducing CSS

--- a/html-css-practice/index.html
+++ b/html-css-practice/index.html
@@ -19,6 +19,9 @@
   <h1>This is the Body of the page</h1>
   <p>Anything within the body of a web page is displayed in the main browser window.</p>
 
+  <a href="practice-css.html">
+    <h2>Practice CSS</h2>
+  </a>
   <hr>
   <!-- Chapter 2: Text -->
   <section>
