--- a/html-css-practice/practice-css.html
+++ b/html-css-practice/practice-css.html
@@ -16,15 +16,105 @@
     h1 {
       color: rgb(255, 255, 255);
     }
+
+    body {
+      font-family: Georgia, Times, serif;
+    }
+
+    h1,
+    h2 {
+      font-family: Arial, Verdana, sans-serif;
+    }
+
+    .credits {
+      font-family: "Courier New", Courier, monospace;
+    }
   </style>
 </head>
 
 <body>
   <!-- Chapter 10: Introducing CSS -->
-  <h1>Potatoes</h1>
+  <!-- <h1>Potatoes</h1>
   <p>There are dozens of different potato
     varieties. They are usually described as
-    early, second early and maincrop.</p>
+    early, second early and maincrop.</p> -->
+
+  <!-- Chapter 12: Text -->
+  <h1>Briards</h1>
+  <p class="credits">by Ivy Duckett</p>
+  <p class="intro">The <a class="breed" href="http://en.wikipedia.org/wiki/Briard">briard</a>, or berger de brie, is a
+    large breed of dog traditionally used as a herder and guardian of sheep...</p>
+
+  <div>
+    <p class="one">the briard is known as a heart wrapped in fur</p>
+    <p class="two">the briard is known as a heart wrapped in fur</p>
+    <p class="three">the briard is known as a heart wrapped in fur</p>
+    <p class="four">the briard is known as a heart wrapped in fur</p>
+    <p class="five">the briard is known as a heart wrapped in fur</p>
+  </div>
+
+  <!-- 10. first letter or line -->
+  <div>
+    <h2>10. first letter or line</h2>
+    <ul>
+      <li>
+        <a href="">the briard is known as a heart wrapped in fur</a>
+      </li>
+      <li>
+        <a href="">the briard is known as a heart wrapped in fur</a>
+      </li>
+      <li>
+        <a href="">the briard is known as a heart wrapped in fur</a>
+      </li>
+      <li>
+        <a href="">the briard is known as a heart wrapped in fur</a>
+      </li>
+      <li>
+        <a href="">the briard is known as a heart wrapped in fur</a>
+      </li>
+      <li>
+        <a href="">the briard is known as a heart wrapped in fur</a>
+      </li>
+    </ul>
+  </div>
+
+  <!-- 11. Responding to users -->
+  <div>
+    <h2>11. Responding to users</h2>
+    <input type="text">
+    <input type="submit" class="submit">
+  </div>
+
+  <!-- Chapter 13: Boxes -->
+  <!-- 1. Box dimensions -->
+  <h2>1. Box dimensions</h2>
+  <div class="box">
+    <p>The Moog company pioneered the commercial manufacture of modular voltage-controlled analog synthesizer systems in
+      the early 1950s.</p>
+  </div>
+  <!-- 2. Limiting width -->
+  <div>
+    <h2>2. Limiting width</h2>
+    <table>
+      <tr>
+        <td><img src="img/puppy.jpg" width="200" height="100" alt="Fender Rhodes" /></td>
+        <td class="description">The Rhodes piano is an electro-mechanical piano, invented by Harold Rhodes during the
+          fifties and later manufactured in a number of models ...</td>
+        <td>$1400</td>
+      </tr>
+    </table>
+  </div>
+
+  <!-- 3. Limiting height -->
+  <h2>3. Limiting height</h2>
+  <div>
+    <h3>Fender Mustang</h3>
+    <p>The Fender Mustang was introduced in 1964 as the basis of a major redesign of Fender's ...</p>
+    <h3>Fender Stratocaster</h3>
+    <p>The Fender Stratocaster or "Strat" is one of the most popular electric guitars of all time ...</p>
+    <h3>Gibson Les Paul<h3>
+    <p>The Gibson Les Paul is a solid body electric guitar that was first sold in 1952 ...</p>
+  </div>
 </body>
 
 </html>
