--- a/html-css-practice/practice-css.html
+++ b/html-css-practice/practice-css.html
@@ -112,8 +112,27 @@
     <p>The Fender Mustang was introduced in 1964 as the basis of a major redesign of Fender's ...</p>
     <h3>Fender Stratocaster</h3>
     <p>The Fender Stratocaster or "Strat" is one of the most popular electric guitars of all time ...</p>
-    <h3>Gibson Les Paul<h3>
+    <h3>Gibson Les Paul</h3>
     <p>The Gibson Les Paul is a solid body electric guitar that was first sold in 1952 ...</p>
+  </div>
+
+  <!-- 4. Overflowing content -->
+  <h2>4. Overflowing content</h2>
+  <div>
+    <h3>Fender Stratocaster</h3>
+    <p class="one">The Fender Stratocaster or "Strat" is one of the most popular electric guitars of all time, and its
+      design has been copied by many guitar makers. It was designed by Leo... </p>
+    <h3>Gibson Les Paul</h3>
+    <p class="two">The Gibson Les Paul is a solid body
+      electric guitar that was first sold in 1952. The Les Paul was designed by Ted McCarty... </p>
+  </div>
+
+  <!-- 5. Border width -->
+  <h2>5. Border width</h2>
+  <div class="border-width">
+    <p class="one">Hohner's "Clavinet" is essentially an electric clavichord.</p>
+    <p class="two">Hohner's "Clavinet" is essentially an electric clavichord.</p>
+    <p class="three">Hohner's "Clavinet" is essentially an electric clavichord.</p>
   </div>
 </body>
 
