--- a/html-css-practice/practice-css.html
+++ b/html-css-practice/practice-css.html
@@ -233,6 +233,34 @@
       </ul>
     </div>
   </section>
+  <hr>
+  <!-- Naming conventions -->
+  <section>
+    <h2>Naming conventions</h2>
+    <div>
+      <h3>1. Hyphen Delimited</h3>
+
+      <!-- All strings in classes are delimited with a hyphen (-), like so: -->
+      <div class="page-head"></div>
+      <div class="sub-content"></div>
+
+      <!-- Camel case and underscores are not used for regular classes; the following are incorrect: -->
+      <div class="pageHead"></div>
+      <div class="sub__content"></div>
+    </div>
+
+    <div>
+      <h3>2. BEM-like Naming</h3>
+      <div class="person"></div>
+      <div class="person__head"></div>
+      <div class="person--tall"></div>
+    </div>
+
+    <div>
+      <h3>2. BEM-like Naming</h3>
+      <div class="person__eye--blue"></div>
+    </div>
+  </section>
 </body>
 
 </html>
