practice html/css style guide

--- a/html-css-practice/practice-css.html
+++ b/html-css-practice/practice-css.html
@@ -261,6 +261,22 @@
       <div class="person__eye--blue"></div>
     </div>
   </section>
+  <hr>
+  <!-- HTML/CSS style guide -->
+  <section>
+    <h2>HTML/CSS style guide</h2>
+    <div>
+      <h3>Protocol</h3>
+      <!-- Not recommended: omits the protocol -->
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+      <!-- Not recommended: uses HTTP -->
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+      <!-- Recommended -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    </div>
+  </section>
 </body>
 
 </html>
