implement deploy web

--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -11,10 +11,33 @@
 <body>
   <section>
     <div class="test">
-      hellooooooooooooooooooo
+      hellooooooooooooooooooosd
     </div>
   </section>
   <script src="js/main.js" type="module"></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBd6ZnIiduy0IL0LbHEaop5p1H1IgnlJVY",
+      authDomain: "html-css-practice-2a111.firebaseapp.com",
+      projectId: "html-css-practice-2a111",
+      storageBucket: "html-css-practice-2a111.appspot.com",
+      messagingSenderId: "813994063343",
+      appId: "1:813994063343:web:486b489f69a8926f0a721a",
+      measurementId: "G-SXCFPGYSGE"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 
 </html>
