--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <title>Practice one</title>
-  </head>
 
-  <body>
-    <div class="container">
-      <include src="./components/header.html"></include>
-    </div>
-  </body>
-  <script src="./js/main.js" type="module"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/src/css/main.css" />
+  <title>Practice one</title>
+</head>
+
+<body>
+  <div class="container">
+    <include src="./components/header.html"></include>
+  </div>
+
+  <script src="/src/js/main.js" type="module"></script>
+</body>
+
 </html>
