--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <include src="./components/header.html"></include>
+    <include src="../src/components/header.html"></include>
   </div>
 
   <script src="/src/js/main.js" type="module"></script>
