change url of header

--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <div class="container">
-    <include src="../src/components/header.html"></include>
+    <include src="./components/header.html"></include>
   </div>
 
-  <script src="/src/js/main.js" type="module"></script>
+  <script src="./js/main.js" type="module"></script>
 </body>
 
 </html>
