--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -11,6 +11,9 @@
 <body>
   <div class="container">
     <include src="./components/header.html"></include>
+    <include src="./components/footer.html">
+
+    </include>
   </div>
 
   <script src="./js/main.js" type="module"></script>
