--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -11,6 +11,26 @@
 <body>
   <div class="container">
     <include src="./components/header.html"></include>
+    <main>
+      <section class="section-top-keyvisual">
+        <div class="keyvisual-background">
+          <img class="is-mobile" src="./assets/images/sp/img_top_keyvisual.jpg" width="375" height="601"
+            alt="Bilgi Teknolojilerinde 23 Yıllık Tecrübe">
+        </div>
+        <div class="wrapper">
+          <div class="keyvisual-content">
+            <h1 class="keyvisual-title">Bilgi<br>Teknolojilerinde <br>23 Yıllık Tecrübe</h1>
+            <p class="keyvisual-detail">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br>için farklı sektörlerde tecrübe kazanmış uzman<br> kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimi<br>hizmetleri sunmaktayız.</p>
+            <form action="POST" class="keyvisual-register">
+              <input type="email" name="" placeholder="Mail bültenimize kayıt ol">
+              <button type="submit" class="button-common-primary">
+                <span class="button-wrapper">Kayıt Ol</span>
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
   </div>
 
   <script src="./js/main.js" type="module"></script>
