implement provide section

--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -38,7 +38,9 @@
         <div class="wrapper">
           <div class="manage-heading">
             <h2 class="title-common-primary">Kalite ve Süreç Yönetimi</h2>
-            <p class="detail-common-primary">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br class="is-mobile"> için farklı sektörlerde tecrübe kazanmış uzman<br class="is-mobile"> kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.</p>
+            <p class="detail-common-primary">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br
+                class="is-mobile"> için farklı sektörlerde tecrübe kazanmış uzman<br class="is-mobile"> kadrolarımızla
+              Proje Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.</p>
           </div>
           <ul class="manage-list">
             <li>
@@ -47,7 +49,8 @@
                   alt="Döküman Analizi">
               </picture>
               <h3 class="manage-title">Döküman Analizi</h3>
-              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet,
+                elementum.</p>
             </li>
             <li>
               <picture class="manage-icon">
@@ -55,7 +58,8 @@
                   alt="Kabul ve Değerlendirme">
               </picture>
               <h3 class="manage-title">Kabul ve Değerlendirme</h3>
-              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet,
+                elementum.</p>
             </li>
             <li>
               <picture class="manage-icon">
@@ -63,7 +67,8 @@
                   alt="İş Kuralları Analizi">
               </picture>
               <h3 class="manage-title">İş Kuralları Analizi</h3>
-              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet,
+                elementum.</p>
             </li>
             <li>
               <picture class="manage-icon">
@@ -71,22 +76,39 @@
                   alt="Akış Diyagramları">
               </picture>
               <h3 class="manage-title">Akış Diyagramları</h3>
-              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet,
+                elementum.</p>
             </li>
             <li>
               <picture class="manage-icon">
                 <img src="./assets/icons/icon_manage_05.svg" width="88" height="82" loading="lazy" alt="Paydaş Analizi">
               </picture>
               <h3 class="manage-title">Paydaş Analizi</h3>
-              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet,
+                elementum.</p>
             </li>
             <li>
               <picture class="manage-icon">
                 <img src="./assets/icons/icon_manage_06.svg" width="88" height="82" loading="lazy" alt="Prototipleme">
               </picture>
               <h3 class="manage-title">Prototipleme</h3>
-              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+              <p class="manage-detail">Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet,
+                elementum.</p>
             </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-top-provide">
+        <div class="wrapper">
+          <div class="provide-heading">
+            <h2 class="title-common-primary">Test Yönetimiyle Neler Sağlıyoruz?</h2>
+            <p class="detail-common-primary">IoT Destekli Çözümler</p>
+          </div>
+          <ul class="provide-list">
+            <li><p class="provide-detail">Yazılım Kalitesini<br> Arttırıyoruz</p></li>
+            <li><p class="provide-detail">Olası Hataları<br> Önceden Belirliyoruz</p></li>
+            <li><p class="provide-detail">Oluşabilecek Riskleri<br> Önlüyoruz</p></li>
+            <li><p class="provide-detail">Zaman ve Maliyetten<br> Tasarruf Sağlıyoruz</p></li>
           </ul>
         </div>
       </section>
